--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,20 @@
    		 <version>42.2.1</version>
 		</dependency>
   </dependencies>
+  
+    <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+          <configuration>
+             <source>1.11</source>
+              <target>1.11</target>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
