--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
     	 <artifactId>postgresql</artifactId>
    		 <version>42.2.1</version>
 		</dependency>
+		<dependency>
+    <groupId>commons-validator</groupId>
+    <artifactId>commons-validator</artifactId>
+    <version>1.4.1</version>
+</dependency>
   </dependencies>
   
     <build>
